crates/biome_cli/tests/snapshots/main_commands_migrate_prettier/prettier_migrate_no_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate prettier
```

## `biome.json`

```json
{ "linter": { "enabled": true } }
```

# Termination Message

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Migration has encountered an error: Biome couldn't find a Prettier configuration file.
  


```
