crates/biome_cli/tests/snapshots/main_commands_migrate_prettier/prettier_migrate_override_with_bad_print_width.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate prettier
```

## `biome.json`

```json
{ "formatter": { "enabled": true } }
```

## `.prettierrc`

```prettierrc
{
        "overrides": [{
            "files": ["**/*.test.js"],
            "options": { "printWidth": 666 }
        }]
    }
```

# Termination Message

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Migration has encountered an error: override element matching ["**/*.test.js"]: The line width should be between 1 and 320, got 666
  
  


```
