crates/biome_cli/tests/snapshots/main_commands_migrate_prettier/prettier_migrate_with_ignore.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome migrate prettier
```

## `biome.json`

```json
{ "linter": { "enabled": true } }
```

## `.prettierignore`

```prettierignore

dist/**

node_modules/**

# I am a comment
generated/*.spec.js

```

## `.prettierrc`

```prettierrc
{ "useTabs": false, "semi": true, "singleQuote": true }
```

# Emitted Messages

```block
biome.json migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
    1    │ - {·"linter":·{·"enabled":·true·}·}
       1 │ + {
       2 │ + → "formatter":·{
       3 │ + → → "enabled":·true,
       4 │ + → → "formatWithErrors":·false,
       5 │ + → → "indentStyle":·"space",
       6 │ + → → "indentWidth":·2,
       7 │ + → → "lineEnding":·"lf",
       8 │ + → → "lineWidth":·80,
       9 │ + → → "attributePosition":·"auto",
      10 │ + → → "bracketSameLine":·false,
      11 │ + → → "bracketSpacing":·true,
      12 │ + → → "expand":·"auto",
      13 │ + → → "useEditorconfig":·true,
      14 │ + → → "includes":·["**",·"!dist/**",·"!node_modules/**",·"!generated/*.spec.js"]
      15 │ + → },
      16 │ + → "linter":·{·"enabled":·true·},
      17 │ + → "javascript":·{
      18 │ + → → "formatter":·{
      19 │ + → → → "jsxQuoteStyle":·"double",
      20 │ + → → → "quoteProperties":·"asNeeded",
      21 │ + → → → "trailingCommas":·"all",
      22 │ + → → → "semicolons":·"always",
      23 │ + → → → "arrowParentheses":·"always",
      24 │ + → → → "bracketSameLine":·false,
      25 │ + → → → "quoteStyle":·"single",
      26 │ + → → → "attributePosition":·"auto",
      27 │ + → → → "bracketSpacing":·true
      28 │ + → → }
      29 │ + → },
      30 │ + → "html":·{
      31 │ + → → "formatter":·{
      32 │ + → → → "indentScriptAndStyle":·false,
      33 │ + → → → "selfCloseVoidElements":·"always"
      34 │ + → → }
      35 │ + → }
      36 │ + }
      37 │ + 
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration needs migration.
  
  i Use --write to apply the changes.
  
  $ biome migrate --write
  

```
